@@ -31,6 +31,9 @@ def test_argument_definitions():
                 'help': 'Tag upload as anime (ignored for movies)',
                 'action': 'store_true',
             },
+            ('--description', '--de'): {
+                'help': 'Custom description as text or path to UTF-8 encoded text file',
+            },
             ('--poster', '--po'): {
                 'help': 'Path or URL to poster image',
             },
