@@ -2,6 +2,8 @@
   * submit: Tracker-specific CLI options changed (see `upsies submit <TRACKER> -h`)
   * Re-use hashed pieces from previously generated torrents if possible
   * Fixed finding the latest release for update checking
+  * bB: New --description option takes a custom description text or the path to
+    a text file
 
 
 2021.10.23
